<resources>
    <string name="app_name">View &amp; Resources</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="attach">attach</string>
    <string name="settings">Settings</string>
    <string name="back">back</string>
    <string name="personName">Ivan Petrov</string>
    <string name="nameHint">Name</string>
    <string name="phone">Phone</string>
    <string name="selectPhoneType">Select</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="date">Date</string>
    <string name="notes">Notes</string>
    <string name="buttonSave">Save</string>
    <string name="cart_image">cart image</string>
    <string name="list_item_number">List item 1</string>
    <string name="price">$35</string>
    <string name="open_cart">open cart</string>
    <string name="show_sign_in_dialog">show sign in dialog</string>
    <string name="open_contacts">open contacts</string>
    <string name="items_in_your_cart">4 items in your cart</string>
    <string name="subtotal">Subtotal:</string>
    <string name="_140">$140</string>
    <string name="shipping">Shipping:</string>
    <string name="_25">$25</string>
    <string name="tax">Tax:</string>
    <string name="_10_50">$10.50</string>
    <string name="order_total">Order Total:</string>
    <string name="_175_50">$175.50</string>
    <string name="price_order">Price order</string>
    <string name="mood">mood</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="reset_my_password">Reset my password</string>
    <string name="cancel">Cancel</string>
</resources>