<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cartPriceBlock"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/orderTotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/orderTotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif"
            android:text="@string/order_total"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/orderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/_175_50"
            android:textColor="?attr/colorTertiary"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/subtotalLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/subtotalText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:text="@string/subtotal"
            />

        <TextView
            android:id="@+id/subtotalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="?attr/colorTertiary"
            android:layout_weight="0"
            android:text="@string/_140" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/shippingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/shippingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/shipping" />

        <TextView
            android:id="@+id/shippingPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="?attr/colorTertiary"
            android:layout_weight="0"
            android:text="@string/_25" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/taxLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/taxText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/tax" />

        <TextView
            android:id="@+id/taxPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="?attr/colorTertiary"
            android:layout_weight="0"
            android:text="@string/_10_50" />

    </LinearLayout>

</LinearLayout>