<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <include layout="@layout/main_toolbar" />

    <LinearLayout
        android:id="@+id/cartLayout"
        android:layout_width="match_parent"
        android:layout_height="0.dp"
        android:layout_margin="10.dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topAppBar">

        <TextView
            android:id="@+id/cartCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:paddingBottom="10dp"
            android:text="@string/items_in_your_cart" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartRW"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">

        </androidx.recyclerview.widget.RecyclerView>

        <include layout="@layout/cart_price_block" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/priceOrderButton"
            android:contentDescription="@string/mood"
            app:icon="@drawable/mood"
            app:iconGravity="textStart"
            app:iconSize="16dp"
            app:iconPadding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:textSize="14sp"
            android:text="@string/price_order" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>