<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="105.dp"
    android:id="@+id/cartItem"
>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80.dp"
        android:layout_height="80.dp"
        android:layout_marginStart="6dp"
        android:contentDescription="@string/cart_image"
        android:src="@drawable/cart_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="222.dp"
        android:layout_height="76.dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:text="@string/list_item_number"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/list_item_number"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/supporting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/list_item_number"
            tools:ignore="MissingConstraints" />

    </LinearLayout>

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/price"
        android:textColor="?attr/colorTertiary"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2.dp"
        android:background="@android:color/darker_gray"
        android:paddingStart="6.dp"
        android:paddingEnd="6.dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/price"
        app:layout_constraintStart_toStartOf="@+id/imageView" />


</androidx.constraintlayout.widget.ConstraintLayout>